got rid of http entry point